# near-training-note-book-app

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.zed/: tasks.json
FT/ft/src/: lib.rs
core/: Cargo.toml
core/src/: exchange.rs  ft_receiver.rs  lib.rs  migration.rs  ownership.rs  pausable.rs
core/tests/: integration.rs
res/: core_contract.wasm  core_contract_old.wasm  core_contract_old_version.wasm  fungible_token.wasm
scripts/: build_all.sh  build_core.sh  build_fungible_token.sh
