[workspace]
resolver = "2"

members = ["core", "FT/ft", "FT/integration-tests/rs"]

[workspace.dependencies]
near-sdk = "5.3.0"
near-contract-standards = "5.3.0"
near-workspaces = "0.11.0"
tokio = "1.12.0"
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# This can be removed when near-sdk is updated
# Unfortuantely, this crate was yanked by the author and this is needed
# Needed for FT contract
[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }
